--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 @import url(https://fonts.googleapis.com/css?family=Ek+Mukta);
 
 body{
-    background-color: #413B2F;
+    background-color: #373228;
 }
 
 a{
@@ -18,7 +18,7 @@ a, a:focus, a:active, a:hover, object, embed {
     outline: 0;
 }
 
-#clouds, #lines, #rings, #trees, #legs , #hat, #feet, #splash, #rock, #bombs, #boomFace{
+#lines, #rings, #trees, #legs , #hat, #feet, #splash, #rock, #bombs, #boomFace, .birds, .tape{
     position:absolute;
     background-repeat: no-repeat; 
 }
@@ -35,7 +35,7 @@ a, a:focus, a:active, a:hover, object, embed {
     font-family: 'Alegreya Sans SC', sans-serif;
     text-align: right;
     position: absolute;
-    height: 200px;
+    height: 350px;
     width: 125px;
     z-index: 10;
     left: 39%;
@@ -120,10 +120,9 @@ a, a:focus, a:active, a:hover, object, embed {
     display: none;
     position: absolute;
     right: 59%;
-    margin-right: -319px;
     top: 805px;
-    font-size: 127px;  
     opacity: 0.8;
+    font-size: 127px;  
     font-family: 'Alegreya Sans SC', sans-serif;
     color: rgb(170, 171, 134);
     line-height: 0.5;
@@ -146,26 +145,19 @@ a, a:focus, a:active, a:hover, object, embed {
             transform: scaleY(-1);
 }
 
-a:active #zHeney, #contacts p:active, #hat:active {
-    -webkit-transform: translate(0, 1px);
-       -moz-transform: translate(0, 1px);
-            transform: translate(0, 1px);
-}
-
 @media all and (max-width: 479px){
     #zHeney{
+        top: 5px;
         color: #702626;
         mix-blend-mode: darken;
     }
     #zHeney2{
-        top: 789px;
+        top: 29px;
     }    
-    #zHeney, #zHeney2 {
+    #zHeney, #zHeney2 {        
         display: block;
         font-size: 37px;
-        margin: 0px;
-        position: static;
-        margin-left: 12%;
+        margin-right: -62px;
         padding-top: 6px;
         text-shadow: none;
     }
@@ -191,6 +183,14 @@ a:active #zHeney, #contacts p:active, #hat:active {
     width: 55%;
 
 }
+
+    #bGroundLeft{
+        position: absolute;
+        display: block;
+        height: 100%;
+        width: 100%;
+    }
+
     .blue{
         background: radial-gradient(farthest-side at 54% 370px, #FFF8E4, 'rgba(122, 151, 152, 0)');
                     linear-gradient(to bottom, rgba(122,151,152,1) 41%,rgba(59,50,46,1) 100%);
@@ -201,7 +201,6 @@ a:active #zHeney, #contacts p:active, #hat:active {
         background: -moz-radial-gradient(54% 370px, circle , rgb(255, 248, 228), rgba(122, 151, 152, 0)),   
                     -moz-linear-gradient(top, rgba(122,151,152,1) 41%, rgba(59,50,46,1) 100%);
     }
-
     .beige {
         background: radial-gradient(farthest-side at 110% 380px, #FFF8E4, #D9CCA2);
         background: -webkit-radial-gradient(100% 380px, circle closest-corner, #FFF8E4, #D9CCA2);
@@ -221,11 +220,6 @@ a:active #zHeney, #contacts p:active, #hat:active {
     left: 0;
     z-index: 0;
     width: 53%;
-}
-@media all and (max-width: 980px) {
-    #lines{
-        width: 100%;
-    }
 }
 
 #rings{
@@ -258,6 +252,9 @@ a:active #zHeney, #contacts p:active, #hat:active {
         left: 39%;
         margin-left: 29px;
     }
+    #lines{
+        width: 100%;
+    }
 }
 
 #hat{
@@ -270,10 +267,6 @@ a:active #zHeney, #contacts p:active, #hat:active {
 }
 
 @media all and (max-width: 479px) {
-    #leftSide{
-        background: -webkit-radial-gradient(110% 380px, circle closest-corner, rgb(217, 204, 85), rgb(196, 80, 80));
-           background: -moz-radial-gradient(110% 380px, circle closest-corner, rgb(217, 204, 85), rgb(196, 80, 80));
-    }
     #menu{
         top: 79px;
         font-size: 0.9em;
@@ -299,10 +292,13 @@ a:active #zHeney, #contacts p:active, #hat:active {
     }
     #legs{
         display: block;
-        top: 96px;
+        top: 99px;
         left: 50%;
         margin-left: 28px;
     }   
+    #clouds{
+        display: none;
+    }
 }
 
 #splash{
@@ -314,18 +310,20 @@ a:active #zHeney, #contacts p:active, #hat:active {
     z-index: 0;
 }
 
-@media all and (max-width: 980px) {
+@media all and (max-width: 1600px) {
     #splash {
         display: none;
     }
 }
 
 #clouds{
+    position: absolute;
+    background-repeat: repeat-x;
     background-image: url('pict/clouds.png');
     height: 303px;
-    width: 100%;
+    width: 450px;
     top: 24px;
-    left: 0;
+    right: 50%;
 }
 
 #rock{
@@ -346,22 +344,27 @@ a:active #zHeney, #contacts p:active, #hat:active {
 }
 
 #contacts{
-    background: -moz-linear-gradient(top,  rgba(150,127,87,0) 41%, rgba(62,53,49,0.3) 100%),url('pict/contactsBackground.png') 2px 90px no-repeat;
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(41%,rgba(150,127,87,0)), color-stop(100%,rgba(62,53,49,0.3))),url('pict/contactsBackground.png') 2px 90px no-repeat;
-    background: -webkit-linear-gradient(top,  rgba(150,127,87,0) 41%,rgba(62,53,49,0.3) 100%),url('pict/contactsBackground.png') 2px 90px no-repeat;
-    background: -o-linear-gradient(top,  rgba(150,127,87,0) 41%,rgba(62,53,49,0.3) 100%),url('pict/contactsBackground.png') 2px 90px no-repeat;
-    background: -ms-linear-gradient(top,  rgba(150,127,87,0) 41%,rgba(62,53,49,0.3) 100%),url('pict/contactsBackground.png') 2px 90px no-repeat;
-    background: linear-gradient(to bottom,  rgba(150,127,87,0) 41%,rgba(62,53,49,0.3) 100%),url('pict/contactsBackground.png') 2px 90px no-repeat;
+    background: -moz-linear-gradient(top,  rgba(150,127,87,0) 41%, rgba(62,53,49,0.3) 100%),url('pict/contactsBackground.png') 0px 90px no-repeat,
+                -moz-radial-gradient(center, ellipse cover,  rgba(240,230,221,0.43) 0%, rgba(179,162,122,1) 70%, rgba(178,161,121,0) 71%, rgba(178,161,121,0) 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(41%,rgba(150,127,87,0)), color-stop(100%,rgba(62,53,49,0.3))),url('pict/contactsBackground.png') 0px 90px no-repeat,
+                -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(240,230,221,0.43)), color-stop(70%,rgba(179,162,122,1)), color-stop(71%,rgba(178,161,121,0)), color-stop(100%,rgba(178,161,121,0)));
+    background: -webkit-linear-gradient(top,  rgba(150,127,87,0) 41%,rgba(62,53,49,0.3) 100%),url('pict/contactsBackground.png') 0px 90px no-repeat,
+                -webkit-radial-gradient(center, ellipse cover,  rgba(240,230,221,0.43) 0%,rgba(179,162,122,1) 70%,rgba(178,161,121,0) 71%,rgba(178,161,121,0) 100%);
+    background: -o-linear-gradient(top,  rgba(150,127,87,0) 41%,rgba(62,53,49,0.3) 100%),url('pict/contactsBackground.png') 0px 90px no-repeat,
+                -o-radial-gradient(center, ellipse cover,  rgba(240,230,221,0.43) 0%,rgba(179,162,122,1) 70%,rgba(178,161,121,0) 71%,rgba(178,161,121,0) 100%);
+    background: -ms-linear-gradient(top,  rgba(150,127,87,0) 41%,rgba(62,53,49,0.3) 100%),url('pict/contactsBackground.png') 0px 90px no-repeat,
+                -ms-radial-gradient(center, ellipse cover,  rgba(240,230,221,0.43) 0%,rgba(179,162,122,1) 70%,rgba(178,161,121,0) 71%,rgba(178,161,121,0) 100%);
+    background: linear-gradient(to bottom,  rgba(150,127,87,0) 41%,rgba(62,53,49,0.3) 100%),url('pict/contactsBackground.png') 0px 90px no-repeat,
+                radial-gradient(ellipse at center,  rgba(240,230,221,0.43) 0%,rgba(179,162,122,1) 70%,rgba(178,161,121,0) 71%,rgba(178,161,121,0) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00967f57', endColorstr='#4d3e3531',GradientType=0 );
     
     background-color: #AEA080;
     border-top-left-radius: 15% 10%;
     display: inline-block;
-    width: 255px;
+    width: 249px;
     height: 480px;
-    box-shadow: inset 4px 0px 61px rgba(0,0,0,0.2);
     text-align: center;
- 
+    box-shadow: inset 4px 0px 61px rgba(0,0,0,0.2), inset 4px 54px 0px 1px rgba(99, 86, 58, 0.3), inset -6px 1px 13px 0px rgba(255, 255, 255, 0.23);
 }
 
     #contacts p {
@@ -405,56 +408,107 @@ a:active #zHeney, #contacts p:active, #hat:active {
     max-width: 900px;
 }
 
-    #bombs{
-        background-image: url('pict/bombs.png');
-        height: 672px;
-        width: 100%;
-        top: 36px;
-        left: 0;
-        z-index: 1;
-    }
-    
-    #boomFace{
-        background-image: url('pict/boomFace.png');
-        height: 725px;
-        width: 409px;
-        bottom: 0px;
-        z-index: 0;
-        right: 0;
-    }
-
-        #ballBrown, #ballGreen{
-            background-repeat: no-repeat;
-            position: absolute;
-            top: 76px;
-            right: 57px;
-            height: 253px;
-            width: 353px;
-
-        }
-        #ballBrown{
-            display: block;
-            background-image: url('pict/ballBrown.png');
-        }
-        #ballGreen{
-            display: block;
-            background-image: url('pict/ballGreen.png');
-        }
-
-    #bGround{
-        position: absolute;
-        display: block;
+    #bGroundRight{
+        top: 0;
         height: 100%;
         width: 100%;
     }
+
+    .piano{
+        background: url('pict/piano.png') no-repeat center;
+    }
+    .flame{
+        background: url('pict/flame.png') no-repeat center 0px;
+    }
+    .cubes{
+        background: url('pict/cubes.png') no-repeat center 0px;
+    }
+    .birds{
+        background: url('pict/birds.png') no-repeat center;
+        background-position-y: 60px;
+    }
+    .tape{
+        background: url('pict/tape.png') no-repeat center;
+    }
+    .orch{
+        background: url('pict/orch.png') no-repeat center;
+    }
+    .treeBirds{
+        background: url('pict/treeBirds.png') no-repeat center 203px;
+    }
+    .rex{
+        background: url('pict/rex.png') no-repeat center bottom;
+    }
+    .trip{
+        background: url('pict/trip.png') no-repeat center bottom;
+    }
+    #boomBlock{ }
+
+        #bombs{
+            background-image: url('pict/bombs.png');
+            height: 672px;
+            width: 100%;
+            top: 36px;
+            left: 0;
+            z-index: 1;
+        }
+        
+        #boomFace{
+            background-image: url('pict/boomFace.png');
+            height: 725px;
+            width: 409px;
+            bottom: 0px;
+            z-index: 0;
+            right: 0;
+        }
+            #underBall{
+                position: absolute;
+                height: 253px;
+                width: 253px;
+                top: 77px;
+                right: 158px;
+            }
     
+                #Ball, .ballBrown, .ballGreen, .ballBlue{                
+                    height: 253px;
+                    width: 253px;
+                }
+
+        /* gradient permalink
+        http://www.colorzilla.com/gradient-editor/#e0dcd5+0,b2a179+71,b2a179+100&1+70,0+71
+        */
+
+        .ballBlue{
+            background: -moz-radial-gradient(center, ellipse cover,  rgba(203,211,211,1) 0%, rgba(178,162,122,1) 70%, rgba(178,161,121,0) 71%, rgba(178,161,121,0) 100%);
+            background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(203,211,211,1)), color-stop(70%,rgba(178,162,122,1)), color-stop(71%,rgba(178,161,121,0)), color-stop(100%,rgba(178,161,121,0)));
+            background: -webkit-radial-gradient(center, ellipse cover,  rgba(203,211,211,1) 0%,rgba(178,162,122,1) 70%,rgba(178,161,121,0) 71%,rgba(178,161,121,0) 100%);
+            background: -o-radial-gradient(center, ellipse cover,  rgba(203,211,211,1) 0%,rgba(178,162,122,1) 70%,rgba(178,161,121,0) 71%,rgba(178,161,121,0) 100%);
+            background: -ms-radial-gradient(center, ellipse cover,  rgba(203,211,211,1) 0%,rgba(178,162,122,1) 70%,rgba(178,161,121,0) 71%,rgba(178,161,121,0) 100%);
+            background: radial-gradient(ellipse at center,  rgba(203,211,211,1) 0%,rgba(178,162,122,1) 70%,rgba(178,161,121,0) 71%,rgba(178,161,121,0) 100%);
+            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cbd3d3', endColorstr='#00b2a179',GradientType=1 );
+        }
+
+        .ballBrown{
+            background: -moz-radial-gradient(center, ellipse cover,  rgba(255,232,155,1) 0%, rgba(132,119,95,1) 70%, rgba(130,117,94,0) 71%, rgba(178,161,121,0) 100%);
+            background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(255,232,155,1)), color-stop(70%,rgba(132,119,95,1)), color-stop(71%,rgba(130,117,94,0)), color-stop(100%,rgba(178,161,121,0)));
+            background: -webkit-radial-gradient(center, ellipse cover,  rgba(255,232,155,1) 0%,rgba(132,119,95,1) 70%,rgba(130,117,94,0) 71%,rgba(178,161,121,0) 100%);
+            background: -o-radial-gradient(center, ellipse cover,  rgba(255,232,155,1) 0%,rgba(132,119,95,1) 70%,rgba(130,117,94,0) 71%,rgba(178,161,121,0) 100%);
+            background: -ms-radial-gradient(center, ellipse cover,  rgba(255,232,155,1) 0%,rgba(132,119,95,1) 70%,rgba(130,117,94,0) 71%,rgba(178,161,121,0) 100%);
+            background: radial-gradient(ellipse at center,  rgba(255,232,155,1) 0%,rgba(132,119,95,1) 70%,rgba(130,117,94,0) 71%,rgba(178,161,121,0) 100%);
+            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffe89b', endColorstr='#00b2a179',GradientType=1 );
+        }
+
+        .ballGreen{
+
+        }
+  
     @media all and (max-width: 980px) {
-        #boomFace, #ballBrown, #ballGreen {
+        #boomFace, #underBall {
             display: none;
         }
     }
     @media all and (max-width: 479px) {
-        #rightSide {
+        #bombs {
             display: none;
         }
         #leftSide, #rightSide{
