Add favicon and "about"

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ a, a:focus, a:active, a:hover, object, embed {
 
 #container{}
 
-#lines, #rings, #trees, #legs , #hat, #feet, #splash, #rock, #bombs, #boomFace, .birds, .tape{
+#lines, #rings, #trees, #legs, #hat, #feet, #splash, #rock{
     position:absolute;
     background-repeat: no-repeat; 
 }
@@ -106,7 +106,10 @@ a, a:focus, a:active, a:hover, object, embed {
         #menu p:nth-child(11){
             background-color: rgb(200, 164, 68);
         }        
-        
+        #menu p:nth-child(12){
+            background-color: rgb(200, 164, 68);
+        }     
+
         #menu p:first-letter {
             color: #EBE4AF;
             font-size: 1em;
@@ -182,14 +185,12 @@ a, a:focus, a:active, a:hover, object, embed {
     width: 55%;
 
 }
-
     #bGroundLeft{
         position: absolute;
         display: block;
         height: 100%;
         width: 100%;
     }
-
     .blue{
         background: radial-gradient(farthest-side at 54% 370px, #FFF8E4, 'rgba(122, 151, 152, 0)');
                     linear-gradient(to bottom, rgba(122,151,152,1) 41%,rgba(59,50,46,1) 100%);
@@ -278,7 +279,7 @@ a, a:focus, a:active, a:hover, object, embed {
     top: 0px;
     height: 786px;
     width: 72px;
-    z-index: 2;
+    z-index: 1;
 }
 
 @media all and (max-width: 1600px) {
@@ -386,6 +387,29 @@ a, a:focus, a:active, a:hover, object, embed {
             color: #E1D5B0;    
         }   
 
+#about{
+    background: -moz-linear-gradient(top,  rgba(150,127,87,0) 41%, rgba(62,53,49,0.3) 100%),
+                -moz-radial-gradient(center, ellipse cover,  rgba(240,230,221,0.43) 0%, rgba(179,162,122,1) 70%, rgba(178,161,121,0) 71%, rgba(178,161,121,0) 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(41%,rgba(150,127,87,0)), color-stop(100%,rgba(62,53,49,0.3))),
+                -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,rgba(240,230,221,0.43)), color-stop(70%,rgba(179,162,122,1)), color-stop(71%,rgba(178,161,121,0)), color-stop(100%,rgba(178,161,121,0)));
+    background: -webkit-linear-gradient(top,  rgba(150,127,87,0) 41%,rgba(62,53,49,0.3) 100%),
+                -webkit-radial-gradient(center, ellipse cover,  rgba(240,230,221,0.43) 0%,rgba(179,162,122,1) 70%,rgba(178,161,121,0) 71%,rgba(178,161,121,0) 100%);
+    background: -o-linear-gradient(top,  rgba(150,127,87,0) 41%,rgba(62,53,49,0.3) 100%),
+                -o-radial-gradient(center, ellipse cover,  rgba(240,230,221,0.43) 0%,rgba(179,162,122,1) 70%,rgba(178,161,121,0) 71%,rgba(178,161,121,0) 100%);
+    background: -ms-linear-gradient(top,  rgba(150,127,87,0) 41%,rgba(62,53,49,0.3) 100%),
+                -ms-radial-gradient(center, ellipse cover,  rgba(240,230,221,0.43) 0%,rgba(179,162,122,1) 70%,rgba(178,161,121,0) 71%,rgba(178,161,121,0) 100%);
+    background: linear-gradient(to bottom,  rgba(150,127,87,0) 41%,rgba(62,53,49,0.3) 100%),
+                radial-gradient(ellipse at center,  rgba(240,230,221,0.43) 0%,rgba(179,162,122,1) 70%,rgba(178,161,121,0) 71%,rgba(178,161,121,0) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00967f57', endColorstr='#4d3e3531',GradientType=0 );
+    
+    background-color: #AEA080;
+    border-top-right-radius: 15% 10%;
+    display: inline-block;
+    width: 249px;
+    height: 480px;
+    text-align: center;
+    box-shadow: inset 4px 0px 61px rgba(0,0,0,0.2), inset 0px 54px 0px 1px rgba(99, 86, 58, 0.3), inset -6px 1px 13px 0px rgba(255, 255, 255, 0.23);
+}
 
 /***************** RIGHTSIDE *******************/
 
@@ -458,8 +482,8 @@ a, a:focus, a:active, a:hover, object, embed {
     }
 
     @media all and (max-width: 980px) {
-        #boomFace {
-            display: none;
+        .boomBlock {
+            background: none;
         }
     }
     @media all and (max-width: 479px) {
